day3 : refacto